[gd_scene load_steps=7 format=3 uid="uid://b8u1p14dtwv4j"]

[ext_resource type="Script" path="res://addons/audiocafe/panel/audio_panel.gd" id="1_bf5yf"]
[ext_resource type="Texture2D" path="res://addons/audiocafe/icons/audio-lines.svg" id="2_27051"]
[ext_resource type="Texture2D" path="res://addons/audiocafe/icons/arrow-big-down-dash.svg" id="2_pgqbs"]
[ext_resource type="Texture2D" path="res://addons/audiocafe/icons/refresh-cw.svg" id="4_tsgsf"]
[ext_resource type="Texture2D" path="res://addons/audiocafe/icons/book-open-text.svg" id="5_xx4nf"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_tsgsf"]
color = Color(0.8920073, 0.3548659, 0.38118282, 1)
thickness = 3

[node name="AudioPanel" type="VBoxContainer"]
custom_minimum_size = Vector2(340, 0)
offset_right = 340.0
offset_bottom = 46.0
size_flags_vertical = 0
script = ExtResource("1_bf5yf")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_tsgsf")

[node name="HeaderButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
text = "AudioCafe"
icon = ExtResource("2_pgqbs")
alignment = 0
icon_alignment = 2

[node name="Audio-lines" type="Sprite2D" parent="."]
position = Vector2(110, 28)
texture = ExtResource("2_27051")

[node name="CollapsibleContent" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 213)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CollapsibleContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GenerateAlbuns" type="Button" parent="CollapsibleContent/HBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Generates the key_playlist.tres file."
text = "Generate Albuns"
icon = ExtResource("4_tsgsf")
autowrap_mode = 3

[node name="DocsButton" type="Button" parent="CollapsibleContent/HBoxContainer"]
custom_minimum_size = Vector2(78, 36)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Docs"
icon = ExtResource("5_xx4nf")

[node name="GenStatusLabel" type="Label" parent="CollapsibleContent"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CollapsibleContent"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="CollapsibleContent"]
layout_mode = 2
size_flags_vertical = 0
current_tab = 0
tabs_rearrange_group = 0

[node name="Settings" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 0

[node name="AssetsPathsSection" type="VBoxContainer" parent="CollapsibleContent/TabContainer/Settings"]
layout_mode = 2

[node name="AssetsPathsLabel" type="Label" parent="CollapsibleContent/TabContainer/Settings/AssetsPathsSection"]
layout_mode = 2
text = "Assets Paths:"

[node name="AssetsPathsGridContainer" type="GridContainer" parent="CollapsibleContent/TabContainer/Settings/AssetsPathsSection"]
layout_mode = 2

[node name="AddAssetsPathButton" type="Button" parent="CollapsibleContent/TabContainer/Settings/AssetsPathsSection"]
layout_mode = 2
text = "Add Asset Path"

[node name="DistPathSection" type="VBoxContainer" parent="CollapsibleContent/TabContainer/Settings"]
layout_mode = 2

[node name="DistPathLabel" type="Label" parent="CollapsibleContent/TabContainer/Settings/DistPathSection"]
layout_mode = 2
text = "Dist / Albuns Path:"

[node name="DistPathGridContainer" type="GridContainer" parent="CollapsibleContent/TabContainer/Settings/DistPathSection"]
layout_mode = 2

[node name="AddDistPathButton" type="Button" parent="CollapsibleContent/TabContainer/Settings/DistPathSection"]
layout_mode = 2
text = "Add Dist Path"

[node name="Albuns" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 1

[node name="AlbunsRichTextLabel" type="RichTextLabel" parent="CollapsibleContent/TabContainer/Albuns"]
layout_mode = 2
text = "8-bit_jingles (17)
hit_jingles (17)
interface_back (4)
interface_bong (1)
interface_click (5)
interface_close (4)
interface_confirmation (4)
interface_drop (4)
interface_error (8)
interface_glass (6)
interface_glitch (4)
interface_maximize (9)
interface_minimize (9)
interface_open (4)
interface_pluck (2)
interface_question (4)
interface_scratch (5)
interface_scroll (5)
interface_select (8)
interface_switch (7)
interface_tick (3)
interface_toggle (4)
pizzicato_jingles (17)
sax_jingles (17)
steel_jingles (17)
ui_click (5)
ui_mouseclick (1)
ui_mouserelease (1)
ui_rollover (6)
ui_switch (38)
"
fit_content = true

[node name="Interactive" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 2

[node name="InteractiveRichTextLabel" type="RichTextLabel" parent="CollapsibleContent/TabContainer/Interactive"]
layout_mode = 2
text = "No interactive streams found."
fit_content = true

[node name="AssetsFolderDialog" type="FileDialog" parent="CollapsibleContent"]
title = "Open a Directory"
popup_window = true
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="DistFolderDialog" type="FileDialog" parent="CollapsibleContent"]
title = "Open a Directory"
popup_window = true
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="SaveFeedbackLabel" type="Label" parent="CollapsibleContent"]
visible = false
layout_mode = 2
text = "Saved!"
horizontal_alignment = 1

[node name="SaveFeedbackTimer" type="Timer" parent="CollapsibleContent"]
wait_time = 1.5
one_shot = true

[connection signal="pressed" from="HeaderButton" to="." method="_on_header_button_pressed"]
[connection signal="pressed" from="CollapsibleContent/HBoxContainer/GenerateAlbuns" to="." method="_on_generate_albuns_pressed"]
[connection signal="pressed" from="CollapsibleContent/HBoxContainer/DocsButton" to="." method="_on_docs_button_pressed"]
[connection signal="pressed" from="CollapsibleContent/TabContainer/Settings/AssetsPathsSection/AddAssetsPathButton" to="." method="_on_add_assets_path_button_pressed"]
[connection signal="pressed" from="CollapsibleContent/TabContainer/Settings/DistPathSection/AddDistPathButton" to="." method="_on_add_dist_path_button_pressed"]
[connection signal="dir_selected" from="CollapsibleContent/AssetsFolderDialog" to="." method="_on_assets_folder_dialog_dir_selected"]
[connection signal="dir_selected" from="CollapsibleContent/DistFolderDialog" to="." method="_on_dist_folder_dialog_dir_selected"]
[connection signal="timeout" from="CollapsibleContent/SaveFeedbackTimer" to="." method="_on_save_feedback_timer_timeout"]
